2000-06-09  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (fetch_mail): close and expunge the source folder
	after copying it to a local folder.

2000-06-09  Ettore Perazzoli  <ettore@helixcode.com>

	* component-factory.c (create_view): Updated to match the changes
	to the definition of `EvolutionShellComponentCreateFn'.  If @type
	is not "mail", return an "unsupported type" error.
	(factory_fn): Pass NULL for the `remove_folder' and
	`create_folder' functions.

2000-06-09  Dan Winship  <danw@helixcode.com>

	* mail-format.c: Redo things a bit so that whitespace-only
	text parts aren't displayed. (In particular, so that
	whitespace-only subparts of multipart/mixed aren't displayed as
	separate (empty) parts.)

2000-06-06  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (fetch_mail): 
	* folder-browser.c (folder_browser_load_folder): Update for folder
	creation/existence changes.

	* message-list.c (message_list_set_folder): Remove the code to
	create the folder if it doesn't exist, since we don't want to do
	that.

2000-06-05  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (composer_send_cb): Leave the composer window around
	if the message doesn't get sent.

2000-06-05  Matt Loper  <matt@helixcode.com>

	* folder-browser.c (etable_key): Allow "GDK_KP_Delete", a keypad
	delete key, to delete a message.

2000-06-05  Dan Winship  <danw@helixcode.com>

	* session.c (evolution_auth_callback): Remember passwords between
	calls.
	(forget_passwords): Callback for "Forget Passwords" menu item.

	* folder-browser-factory.c (control_activate): 
	(control_deactivate): Add "Forget Passwords" menu item.

	* mail.h, mail-ops.c: fix some function prototypes

	* folder-browser.c (etable_key): Add "Delete" = delete message.

	* mail-format.c (mail_generate_forward): Update for new composer
	attachment interface.

2000-06-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c (providers_config_new): Added a new notebook
	page that allowed for mail format (text/plain or 